--- a/package.json
+++ b/package.json
@@ -11,10 +11,19 @@
   "author": "ReactifyStudio",
   "license": "MIT",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "config": "^3.3.6",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "ejs": "^3.1.6",
-    "express": "^4.17.1",
-    "mongoose": "^7.1.0",
+    "express": "^4.21.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^7.8.2",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0",
     "shortid": "^2.2.16",
     "valid-url": "^1.0.9"
   },
